fixed letter spacing on h2 header and removed useEffect

--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,7 @@ h2 {
     margin: 0 0 20px 10px;
     line-height: .8em;
     font-weight: bold;
+    letter-spacing: 1px;
 }
 
 hr {
